# WebEngineering_ExtendedPlayground

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deployment.yml  development.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
src/: App.vue  main.ts  style.css
src/components/: BearData.vue  CommentSection.vue
src/modules/: bearData.test.ts  bearData.ts  commentSection.ts
