[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum for our HTTP server
axum = "0.6"
# Tokio for async runtime
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
# reqwest for making HTTP requests to Wikipedia
reqwest = { version = "0.11", features = ["json"] }
# serde_json for JSON parsing/serialization
serde_json = "1.0"
# tower for middleware, timeouts, etc. (used under the hood by axum)
tower = "0.4"
# tower-http for additional middleware layers
tower-http = { version = "0.4.4", features = ["cors"] }
